--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,16 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@keyframes marquee {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+.animate-marquee {
+    animation: marquee linear infinite;
+}
